added dto and mapper